Fix issues with z-index at all App

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -50,7 +50,7 @@
     background-color: #f2f1f1;
     box-shadow: 3px 3px 3px 3px $light-gray;
     border: 1px solid $light-gray;
-    z-index: 1000;
+    z-index: 11;
     border-radius: 12px;
     width: 240px;
     font-weight: bold;
