--- a/src/assets/styles/cmps/GuestsFilter.scss
+++ b/src/assets/styles/cmps/GuestsFilter.scss
@@ -13,7 +13,7 @@
   height: 400px;
 
   justify-content: center;
-  z-index: 1000;
+  z-index: 10;
   position: absolute;
   top: 100%;
   right: -1px;
@@ -35,11 +35,13 @@
       padding: 8px;
       font-size: 15px;
       margin-bottom: 5px;
+
       // text-align-last: start;
       & h4 {
         font-weight: 500;
         color: $black2;
       }
+
       & h5 {
         font-weight: 400;
         color: $main-gray;
