--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -7,6 +7,7 @@
 
   list-style: none;
 }
+
 .full-width-hr {
   border: none;
   height: 1px;
@@ -26,7 +27,7 @@
   bottom: 100px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1000;
+  z-index: 1;
   background-color: $black2;
   color: white;
   border: none;
