--- a/src/assets/styles/cmps/WhereFilter.scss
+++ b/src/assets/styles/cmps/WhereFilter.scss
@@ -12,7 +12,7 @@
   // left: 50%;
 
   border: 1px solid $light-gray;
-  z-index: 1000;
+  z-index: 10;
   border-radius: 12px;
 
   background-color: white;
@@ -91,7 +91,7 @@
   transform: translateX(-50%);
   background-color: white;
   border: 2px solid $light-gray;
-  z-index: 1000;
+  z-index: 10;
   width: 1000px;
   border-radius: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -248,8 +248,7 @@
     justify-content: space-around;
   }
 
-  &_week {
-  }
+  &_week {}
 
   &__day-name,
   &__day {
@@ -328,7 +327,7 @@
     height: 200px;
     padding-top: 15px;
     padding-left: 20px;
-    z-index: 1000;
+    z-index: 10;
     position: absolute;
     top: 100%;
     right: 48%;
@@ -476,7 +475,7 @@
     max-width: 100%;
     height: 48px;
     margin: 0;
-    z-index: 10;
+    z-index: 11;
     position: absolute;
     margin-right: 10px;
     padding: 16px;
@@ -578,7 +577,7 @@
           content: none;
         }
 
-        &:hover + .in-cal::after {
+        &:hover+.in-cal::after {
           content: none;
         }
 
