--- a/src/assets/styles/cmps/carusel.scss
+++ b/src/assets/styles/cmps/carusel.scss
@@ -1,7 +1,7 @@
 .filter-main {
   position: sticky;
   top: 80px;
-  z-index: 1000;
+  z-index: 1;
   background-color: white;
 }
 
