--- a/src/assets/styles/views/AddStay.scss
+++ b/src/assets/styles/views/AddStay.scss
@@ -4,6 +4,7 @@
   padding: 20px;
   background-color: #f9f9f9;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
   h2 {
     text-align: center;
     color: #333;
@@ -83,7 +84,7 @@
       cursor: pointer;
 
 
-      
+
     }
 
     .options-container {
@@ -98,7 +99,7 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
       overflow: hidden;
-      z-index: 1000;
+      z-index: 10;
 
       &.open {
         display: block;
