--- a/src/assets/styles/views/PagePayment.scss
+++ b/src/assets/styles/views/PagePayment.scss
@@ -183,7 +183,7 @@
 
 
                 & .payment-confrim-modal {
-                    z-index: 1000;
+                    z-index: 100;
                     font-size: 14px;
                     background-color: white;
                     padding: 1em;
